rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: kong
  labels:
    app: rabbitmq
spec:
  selector:
    matchLabels:
      component: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq
          ports:
            - containerPort: 5672
