redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: kong
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      component: redis
  replicas: 1
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
