rabbitmq-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: kong
spec:
  type: ClusterIP
  selector:
    component: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
