redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: kong
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
