kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: kong
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - backend:
          service:
            name: app1-svc
            port:
              number: 8010
        path: /add
        pathType: Exact
  - http:
      paths:
        - backend:
            service:
              name: app3-svc
              port:
                number: 8010
          path: /get
          pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 20.74.89.85
